# markwell

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.ko.md  README.md  README.zh-TW.md  SECURITY.md  kobo_highlights.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  schema_report.yml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
docs/: cloud-backup.ja.md  cloud-backup.ko.md  cloud-backup.md  cloud-backup.zh-TW.md  maintainer-stats.md
docs/adr/: 0001-desktop-distribution-runtime.md
docs/plans/: 2026-06-02-markwell-desktop-distribution.md
docs/superpowers/plans/: 2026-06-01-kobo-backup.md  2026-06-11-community-release.md
docs/superpowers/specs/: 2026-06-01-kobo-backup-design.md  2026-06-02-gui-reading-experience-design.md  2026-06-02-markwell-gui-design.md  2026-06-02-markwell-gui-pdca-log.md  2026-06-11-community-release-design.md
kobo_backup/: __init__.py  cli.py
kobo_backup/render/: __init__.py  json.py  markdown.py
markwell/: __init__.py  cli.py  config.py  desktop.py  device.py  export.py  model.py  reader.py
markwell/gui/: __init__.py  __main__.py  sample.py  server.py  service.py
markwell/gui/assets/: app.js  cards.js  i18n.js  index.html  style.css
markwell/render/: anki.py  csv.py  html.py  json.py  labels.py  markdown.py
packaging/: README.md  _forbidden.py  preflight.py
packaging/pyinstaller/: Markwell.icns  entry.py  markwell-desktop.spec
site/: DEPLOY.md  _headers  index.html  site.css  wrangler.jsonc
site/ja/: index.html
site/ko/: index.html
site/zh-tw/: index.html
tests/: conftest.py  test_archive.py  test_cli.py  test_config.py  test_device.py  test_export.py  test_gui.py  test_gui_i18n.py  test_labels.py  test_model.py  test_package.py  test_preflight.py  test_reader.py  test_render_anki.py  test_render_csv.py  test_render_html.py  test_render_json.py  test_render_markdown.py  test_server_settings.py  test_service_settings.py
