[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "markwell"
version = "0.2.0"
description = "Markwell — back up and export your Kobo highlights and notes to Markdown, JSON, CSV, Anki TSV, and HTML."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Eric Tu" }]
keywords = ["kobo", "ebook", "highlights", "annotations", "backup"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/ceparadise168/markwell"
Repository = "https://github.com/ceparadise168/markwell"
Changelog = "https://github.com/ceparadise168/markwell/blob/main/CHANGELOG.md"
Issues = "https://github.com/ceparadise168/markwell/issues"

[project.optional-dependencies]
dev = ["pytest>=7"]
release = ["pyinstaller>=6,<7"]

[project.scripts]
markwell = "markwell.cli:main"
markwell-gui = "markwell.gui.server:main"
markwell-desktop = "markwell.desktop:main"

[tool.setuptools.packages.find]
include = ["markwell*"]

[tool.setuptools.package-data]
"markwell.gui" = ["assets/*"]
